added class name to paragraph tag

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <body>
     <h2 style="font-size: xx-large;">Testing</h2>
     <p>I LOVE CODING SO MUCH</p>
-    <p>THE LINK</p>
+    <p class="link">THE LINK</p>
   </body>
 </html>
