added styling in html tag for h2

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Testing</title>
   </head>
   <body>
-    <h2>Testing</h2>
+    <h2 style="font-size: xx-large;">Testing</h2>
     <p>I LOVE CODING SO MUCH</p>
   </body>
 </html>
