added comment about creating basic html doc in index

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- use "!" as a shortcut to create an html boilerplate -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
