added footer to index

--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
   <body>
     <h2 style="font-size: xx-large">Testing</h2>
     <p>I LOVE CODING SO MUCH</p>
+    <ul>
+      <li>
+        first thing
+      </li>
+      <li>
+        second thing
+      </li>
+      <li>
+        third thing
+      </li>
+    </ul>
     <a
     target="_blank"  
     href="https://www.zeldadungeon.net/wiki/images/thumb/d/d8/Link_-_TotK_key_art_nobg.png/400px-Link_-_TotK_key_art_nobg.png"
@@ -18,4 +29,7 @@
       <p class="link">THE LINK</p>
     </a>
   </body>
+  <footer>
+    HI
+  </footer>
 </html>
