title added to list

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h2 style="font-size: xx-large">Testing</h2>
     <p>I LOVE CODING SO MUCH</p>
     <ul>
+      THE LIST
       <li>
         first thing
       </li>
