added button element to html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <h2 style="font-size: xx-large">Testing</h2>
     <p>I LOVE CODING SO MUCH</p>
+    <button>Click Me!</button>
     <ul>
       THE LIST
       <li>
