added textarea element to page

--- a/index.html
+++ b/index.html
@@ -14,24 +14,19 @@
     <button>Click Me!</button>
     <ul>
       THE LIST
-      <li>
-        first thing
-      </li>
-      <li>
-        second thing
-      </li>
-      <li>
-        third thing
-      </li>
+      <li>first thing</li>
+      <li>second thing</li>
+      <li>third thing</li>
     </ul>
+    <div>
+      <textarea></textarea>
+    </div>
     <a
-    target="_blank"  
-    href="https://www.zeldadungeon.net/wiki/images/thumb/d/d8/Link_-_TotK_key_art_nobg.png/400px-Link_-_TotK_key_art_nobg.png"
+      target="_blank"
+      href="https://www.zeldadungeon.net/wiki/images/thumb/d/d8/Link_-_TotK_key_art_nobg.png/400px-Link_-_TotK_key_art_nobg.png"
     >
       <p class="link">THE LINK</p>
     </a>
   </body>
-  <footer>
-    HI
-  </footer>
+  <footer>HI</footer>
 </html>
