added text above textarea

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <li>third thing</li>
     </ul>
     <div>
+      <span>type <b>below</b></span>
       <textarea></textarea>
     </div>
     <a
