added button below textarea and class names to differentiate between buttons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <h2 style="font-size: xx-large">Testing</h2>
     <p>I LOVE CODING SO MUCH</p>
-    <button>Click Me!</button>
+    <button class="clickMeButton">Click Me!</button>
     <ul>
       THE LIST
       <li>first thing</li>
@@ -21,6 +21,7 @@
     <div>
       <span>type <b>below</b></span>
       <textarea></textarea>
+      <button class="submitButton">Submit</button>
     </div>
     <a
       target="_blank"
