added placeholder to textarea

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </ul>
     <div>
       <span>type <b>below</b></span>
-      <textarea></textarea>
+      <textarea placeholder="Link is the best main character, isn't he?"></textarea>
       <button class="submitButton">Submit</button>
     </div>
     <a
