added background to textbox div

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li>second thing</li>
       <li>third thing</li>
     </ul>
-    <div>
+    <div class="textbox">
       <span>type <b>below</b></span>
       <textarea placeholder="Link is the best main character, isn't he?"></textarea>
       <button class="submitButton">Submit</button>
